--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       - discovery.type=single-node
       - xpack.security.enabled=false
       - xpack.monitoring.collection.enabled=true
+      - "ES_JAVA_OPTS=-Xms4096m -Xmx4096m"
     volumes:
       - elastic_data:/usr/share/elasticsearch/data:rw
     networks:
@@ -32,11 +33,28 @@ services:
       - redis_data:/data:rw
     networks:
       - cinema_network
+  nginx: 
+    image: nginx:1.19.3 
+    ports: 
+      - 80:80
+    expose:
+      - 80
+    restart: always 
+    volumes: 
+      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./infra/nginx/site.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/django_static/  
+      - media_value:/var/html/django_media/ 
+    networks:
+      - cinema_network
 
 volumes:
   db_data:
   redis_data:
   elastic_data:
+  static_value:
+  media_value:
+
 
 networks:
   cinema_network:
